--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.3
-Flask-SocketIO==5.3.2
-psutil==5.9.5
-python-socketio==5.8.0
-eventlet==0.33.3
+Flask
+Flask-SocketIO
+psutil
+python-socketio
+eventlet
+sqlalchemy
+
